<resources>
    <string name="app_name">PTT Mobile</string>
    <string name="title_section1">Message</string>
    <string name="title_section2">Explore</string>
    <string name="title_section3">Contact</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_new_task">Add task</string>
    <string name="action_overflow">Overflow</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_new">New</string>
    <string name="default_user_name">Theo Wang</string>
    <string name="default_message">Hello World!</string>
    <string name="default_time_tracking_message">No task selected</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="action_chating_information">Chating information</string>
    <string name="hello_world">Hello World!</string>
    <string name="voice_message">Voice Message</string>
    <string name="please_input_message">Please input message here</string>
    <string name="more_features">More Features</string>
    <string name="send_now">Send Now</string>
    <string name="track_time">Track Time</string>
    <string name="time_sheet_today">Time Sheet Today</string>
    <string name="task_monitor">Task Monitor</string>
    <string name="title_activity_track_time">Track Time</string>
    <string name="scan_qr_bar_code">Scan QR or Bar Code</string>
    <string name="title_activity_capture_code">CaptureCodeActivity</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_orientation_title">No automatic rotation</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="msg_capture_qr_code">Please scan QR code of a PTT task or task list</string>
    <string name="msg_no_task_on_tracking">There is no task on tracking</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="button_scan_image">Scan Image</string>
    <string name="button_back">Back</string>
    <string name="button_flash_off">Flash Off</string>
    <string name="button_flash_On">Flash On</string>
    <string name="button_start_tracking">Start</string>
    <string name="button_stop_tracking">Stop</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="result_isbn">Found book</string>
    <string name="result_product">Found product</string>
    <string name="result_sms">Found SMS address</string>
    <string name="result_tel">Found phone number</string>
    <string name="result_text">Found plain text</string>
    <string name="result_uri">Found URL</string>
    <string name="result_wifi">Found WLAN Configuration</string>
    <string name="wifi_changing_network">Requesting connection to network\u2026</string>
    <string name="tmp_task_title">TV/Audio/Video > Home Theatre > Home Theatre System > HW-H7501 (Primary) </string>
    <string name="tmp_task_work_type">Work Type : Insert </string>
    <string name="tmp_task_job_id">Job ID : 15962752 </string>
    <string name="tmp_task_preview_link">Preview Link : bit.ly/gTR1y </string>
    <string name="tmp_attachement_name">translation_result.xlsx</string>
    <string name="task_log">LOG</string>
    <string name="task_log_comment">Lin Na Fan --- SEC.Web Production Support : Submit task.</string>
    <string name="task_log_time">Sep 24, 2014 10:30 HKT [02:30 GMT]</string>
    <string name="task_log_comment1">Nuo Fu --- SEC.Web Production Lead : pls assist,  not need to update gallery </string>
    <string name="task_log_time1">Sep 24, 2014 13:11 HKT [05:11 GMT]</string>
    <string name="task_log_comment2">Xu Lin OPR Fan --- SEC.Web Builder : done </string>
    <string name="task_log_time2">Sep 25, 2014 10:29 HKT [02:29 GMT]</string>
    <string name="task_log_comment3">Xu Lin OPR Fan --- SEC.Web Builder : Completed quality self-assessment</string>
    <string name="task_log_time3">Sep 25, 2014 10:36 HKT [02:36 GMT]</string>
    <string name="task_log_comment4">Huan Liu --- SEC.QA Reviewer : QA approved,pls review,thanks.</string>
    <string name="task_log_time4">Sep 26, 2014 10:01 HKT [02:01 GMT]</string>
    <string name="task_log_comment5">Jia Sheng Yin --- SEC.Web Production Lead : Huan Liu has been checked here!</string>
    <string name="task_log_time5">Sep 26, 2014 18:15 HKT [10:15 GMT]</string>
    <string name="progress_text">0%</string>
    <string name="button_task_reject">Reject</string>
    <string name="button_task_approve">Approve</string>
    <string name="button_task_preview">Preview</string>
    <string name="msg_task_comments">Comments?</string>
    <string name="login_label_email">Email:</string>
    <string name="login_label_pwd">Password:</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in"><b>Sign in</b></string>
    <string name="action_forget_pwd"><b>Forget</b></string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="login_copyright">©Copyright Concentrix Corporation 2015.</string>
    <string name="task_item_priority_text">Task priority</string>
    <string name="task_item_reqnum_text">Task requst number</string>
    <string name="task_item_title_text">Task title</string>
    <string name="task_item_subdate_text">2012&#8211;10&#8211;28 18:35</string>
</resources>