<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cnx.ptt.DisplayMessageActivity$PlaceholderFragment" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ProgressBar
            android:id="@+id/client_pb"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="10.0dip"
            android:max="100"
            android:visibility="gone" />
    </LinearLayout>
    <ListView
        android:id="@+id/lv_display_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="#FFFFFFFF"
        android:cacheColorHint="@null"
        android:divider="@null"
        android:listSelector="@android:color/transparent"
        android:stackFromBottom="true" />
	<View 
	    android:layout_width="fill_parent"
	    android:layout_height="1px"
	    android:background="#000"
	    />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >

	   
	    <ImageButton
	        android:id="@+id/botton_voice_message"
	        android:src="@drawable/ic_action_mic"
	        android:contentDescription="@string/voice_message"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
	    <EditText
	        android:id="@+id/input_message"
	        android:layout_height="fill_parent"
	        android:layout_width="0dp"
	        android:singleLine="true"
	        android:hint="@string/please_input_message"
	        android:layout_weight="1"
	        />
	    <ImageButton 
	        android:id="@+id/button_send_now"
	        android:src="@drawable/ic_action_send_now"
	        android:contentDescription="@string/send_now"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="SendNowOnClick"
	        />
	</LinearLayout>
	
    
</LinearLayout>
